--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,3 +62,12 @@ h1 {
   border-color: black;
   font-size: 117%;
 }
+main {
+  margin-top: 3%;
+}
+section {
+  margin-bottom: 3%;
+}
+.imgMain {
+  width: 45%;
+}
