--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
 body {
   margin: 1.2%;
   text-align: center;
+  background-color: rgb(243, 255, 240);
 }
 a {
   cursor: pointer;
@@ -63,12 +64,40 @@ h1 {
   font-size: 117%;
 }
 main {
-  margin-top: 3%;
+  margin-top: 9%;
 }
 section {
-  margin-bottom: 3%;
+  margin-bottom: 3.2%;
 }
 .imgMain {
   width: 45%;
   min-width: 340px;
+}
+h2 {
+  font-size: 150%;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  margin-top: 1%;
+}
+section > article > p {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  margin-top: 0.7%;
+  margin-bottom: 0.7%;
+}
+section > article > a {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 110%;
+  border-bottom: 2px solid;
+}
+
+section > article > a:hover {
+  border-bottom: none;
+}
+header {
+  padding-top: 0;
+  position: fixed;
+  top: 0; /* Fissa la navbar in alto */
+  background-color: rgb(243, 255, 240);
+  width: 97.5%;
+  padding-bottom: 1.5%; /*MESSO SOLO PER NON FAR SFORARE BORDO A SX DI LENTE DURANTE LO SCORRIMENTO
+                        DA ACCORCIARE QUEL BORDO*/
 }
