--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,20 +96,18 @@ header {
   top: 0; /* Fissa la navbar in alto */
   background-color: rgb(243, 255, 240);
   width: 97.5%;
-  padding-bottom: 1.5%; /*MESSO SOLO PER NON FAR SFORARE BORDO A SX DI LENTE DURANTE LO SCORRIMENTO
+  padding-bottom: 1.5%; /*MESSO SOLO PER NON FAR SFORARE BORDO A SX DI LENTE DURANTE LO SCORRIMENTO,
                         DA ACCORCIARE QUEL BORDO*/
 }
 .divHoverNavBarF > img {
   padding: 1%;
   width: 14.6%;
-  margin-top: 2%;
-  margin-bottom: 2%;
 }
 .divHoverNavBarF {
   width: 90%;
   height: 120%;
   position: absolute; /* NON SMINCIA LE ANCORE DELLA NAV FISSA QUANDO APPAIONO I DIV */
-  margin-top: 10%;
+  margin-top: 10.5%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
