--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,11 +70,21 @@ main {
 section {
   margin-bottom: 3.2%;
 }
-.imgMain,
-.img2Main {
+.imgMain {
   width: 45%;
   min-width: 340px;
   border-radius: 4%;
+}
+.img2Main,
+.images2Main {
+  width: 50%;
+  min-width: 100px;
+  border-radius: 4%;
+  display: inline-block;
+  margin-top: 1.1%;
+}
+.images2Main {
+  width: 100%;
 }
 h2 {
   font-size: 150%;
@@ -116,4 +126,14 @@ header {
   top: 50%; /*CENTRA I DIV CHE APPAIONO SOTTO ANCORE*/
   left: 50%; /*   ""                            ""   */
   transform: translate(-50%, -50%); /*   ""                            ""   */
+}
+footer {
+  background-color: black;
+  color: aliceblue;
+  text-align: center;
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+.divFooter {
+  font-size: 600%;
 }
