--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,28 @@ body {
   text-align: center;
   background-color: rgb(243, 255, 240);
 }
+h1 {
+  margin-top: -1.2%;
+  font-size: 400%;
+  font-style: italic;
+  font-family: cursive;
+  margin-bottom: 1.7%;
+}
+h2 {
+  font-size: 150%;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  margin-top: 1%;
+}
+header {
+  padding-top: 1%;
+  position: fixed;
+  top: 0; /* Fissa la navbar in alto */
+  background-color: rgb(243, 255, 240);
+  width: 97.55%;
+  padding-bottom: 1.8%; /*MESSO SOLO PER NON FAR SFORARE BORDO A SX DI LENTE DURANTE LO SCORRIMENTO,
+                        DA ACCORCIARE QUEL BORDO*/
+}
+
 a {
   cursor: pointer;
   /* text-decoration: none;  QUANDO VERRANNANNO AGIGUNTI HREF*/
@@ -28,13 +50,7 @@ a {
 .aSecondaMetàNav1:hover {
   color: rgb(183, 0, 0);
 }
-h1 {
-  margin-top: -1.2%;
-  font-size: 400%;
-  font-style: italic;
-  font-family: cursive;
-  margin-bottom: 1.7%;
-}
+
 .navBarFissa {
   margin-top: 1.2%;
   margin-left: auto;
@@ -44,6 +60,17 @@ h1 {
 .divHoverNavBarF {
   background-color: aqua;
   padding: 2%;
+  width: 90%;
+  height: 120%;
+  position: absolute; /* NON SMINCIA LE ANCORE DELLA NAV FISSA QUANDO APPAIONO I DIV */
+  margin-top: 13%;
+  top: 50%; /*CENTRA I DIV CHE APPAIONO SOTTO ANCORE*/
+  left: 50%; /*   ""                            ""   */
+  transform: translate(-50%, -50%); /*   ""                            ""   */
+}
+.divHoverNavBarF > img {
+  padding: 1%;
+  width: 14.6%;
 }
 .aNavFissa {
   padding: 1%;
@@ -70,27 +97,6 @@ main {
 section {
   margin-bottom: 3.2%;
 }
-.imgMain {
-  width: 45%;
-  min-width: 340px;
-  border-radius: 4%;
-}
-.img2Main,
-.images2Main {
-  width: 50%;
-  min-width: 100px;
-  border-radius: 4%;
-  display: inline-block;
-  margin-top: 1.1%;
-}
-.images2Main {
-  width: 100%;
-}
-h2 {
-  font-size: 150%;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  margin-top: 1%;
-}
 section > article > p {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   margin-top: 0.7%;
@@ -105,35 +111,44 @@ section > article > a {
 section > article > a:hover {
   border-bottom: none;
 }
-header {
-  padding-top: 1%;
-  position: fixed;
-  top: 0; /* Fissa la navbar in alto */
-  background-color: rgb(243, 255, 240);
-  width: 97.55%;
-  padding-bottom: 1.8%; /*MESSO SOLO PER NON FAR SFORARE BORDO A SX DI LENTE DURANTE LO SCORRIMENTO,
-                        DA ACCORCIARE QUEL BORDO*/
+.imgMain {
+  width: 45%;
+  min-width: 340px;
+  border-radius: 4%;
 }
-.divHoverNavBarF > img {
-  padding: 1%;
-  width: 14.6%;
+.broImg2Main,
+.img2Main {
+  width: 50%;
+  min-width: 100px;
+  border-radius: 4%;
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 1.1%;
 }
-.divHoverNavBarF {
-  width: 90%;
-  height: 120%;
-  position: absolute; /* NON SMINCIA LE ANCORE DELLA NAV FISSA QUANDO APPAIONO I DIV */
-  margin-top: 13%;
-  top: 50%; /*CENTRA I DIV CHE APPAIONO SOTTO ANCORE*/
-  left: 50%; /*   ""                            ""   */
-  transform: translate(-50%, -50%); /*   ""                            ""   */
+.img2Main {
+  width: 100%;
 }
 footer {
   background-color: black;
+  margin-bottom: -1%;
+}
+footer > div {
+  font-size: 110%;
+  padding-top: 4%;
+  padding-bottom: 4%;
+}
+footer > div > ul,
+li {
   color: aliceblue;
-  text-align: center;
-  padding-top: 2%;
-  padding-bottom: 2%;
+  display: inline;
+  padding: 4%;
 }
-.divFooter {
-  font-size: 400%;
 }
+footer > div > ul {
+  display: inline;
+}
+}
+footer > div > li {
+  display: flex;
+ 
