--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,9 @@ body {
   margin: 1.2%;
   text-align: center;
   background-color: rgb(243, 255, 240);
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
 h1 {
   margin-top: -1.2%;
