--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,15 +5,14 @@ body {
   text-align: center;
   background-color: rgb(243, 255, 240);
   height: 100%;
-  margin-left: auto;
-  margin-right: auto;
+  position: relative;
 }
 h1 {
   margin-top: -1.2%;
   font-size: 400%;
   font-style: italic;
   font-family: cursive;
-  margin-bottom: 1.7%;
+  margin-bottom: 1.9%;
 }
 h2 {
   font-size: 150%;
@@ -21,11 +20,12 @@ h2 {
   margin-top: 1%;
 }
 header {
-  padding-top: 1%;
   position: fixed;
-  top: 0; /* Fissa la navbar in alto */
+  top: 0;
   background-color: rgb(243, 255, 240);
   width: 97.55%;
+  margin-left: auto;
+  margin-right: auto;
   padding-bottom: 1.8%; /*MESSO SOLO PER NON FAR SFORARE BORDO A SX DI LENTE DURANTE LO SCORRIMENTO,
                         DA ACCORCIARE QUEL BORDO*/
 }
@@ -62,18 +62,18 @@ a {
 }
 .divHoverNavBarF {
   background-color: aqua;
-  padding: 2%;
-  width: 90%;
-  height: 120%;
+  padding: 1.5%;
+  width: 75%;
+  height: fit-content;
   position: absolute; /* NON SMINCIA LE ANCORE DELLA NAV FISSA QUANDO APPAIONO I DIV */
   margin-top: 13%;
-  top: 50%; /*CENTRA I DIV CHE APPAIONO SOTTO ANCORE*/
+  top: 21%; /*CENTRA I DIV CHE APPAIONO SOTTO ANCORE*/
   left: 50%; /*   ""                            ""   */
   transform: translate(-50%, -50%); /*   ""                            ""   */
 }
 .divHoverNavBarF > img {
   padding: 1%;
-  width: 14.6%;
+  width: 14%;
 }
 .aNavFissa {
   padding: 1%;
@@ -94,8 +94,7 @@ a {
   font-size: 117%;
 }
 main {
-  margin-top: 11%;
-  padding-top: 1.1%;
+  margin-top: 10%;
 }
 section {
   margin-bottom: 3.2%;
