--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,9 +4,13 @@ body {
   margin: 1.2%;
   text-align: center;
   background-color: rgb(243, 255, 240);
-  height: 100%;
   position: relative;
+  max-height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
 }
+
 h1 {
   margin-top: -1.2%;
   font-size: 400%;
@@ -20,10 +24,11 @@ h2 {
   margin-top: 1%;
 }
 header {
+  padding-top: 1.1%;
   position: fixed;
   top: 0;
   background-color: rgb(243, 255, 240);
-  width: 97.55%;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   padding-bottom: 1.8%; /*MESSO SOLO PER NON FAR SFORARE BORDO A SX DI LENTE DURANTE LO SCORRIMENTO,
@@ -65,7 +70,7 @@ a {
   padding: 1.5%;
   width: 75%;
   height: fit-content;
-  position: absolute; /* NON SMINCIA LE ANCORE DELLA NAV FISSA QUANDO APPAIONO I DIV */
+  position: absolute;
   margin-top: 13%;
   top: 21%; /*CENTRA I DIV CHE APPAIONO SOTTO ANCORE*/
   left: 50%; /*   ""                            ""   */
@@ -95,6 +100,8 @@ a {
 }
 main {
   margin-top: 10%;
+  padding-top: 3%;
+  margin-bottom: 1%;
 }
 section {
   margin-bottom: 3.2%;
@@ -148,7 +155,7 @@ footer > div {
 footer > div > ul,
 li {
   color: aliceblue;
-  padding: 0 45px;
+  padding: 0 1%;
 }
 footer > div > ul h6 {
   margin-bottom: 20px;
@@ -157,3 +164,19 @@ footer > div > ul h6 {
   font-size: 60%;
   align-items: center;
 }
+/* @media screen and (min-width: 300px) {
+  h1 {
+    font-size: 240%;
+  }
+  header,
+  main {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+  }
+  footer > div {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+  }
+} */
