--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Aldrich&display=swap");
 
 body {
-  margin: 1.2%;
+  margin-top: 1%;
   text-align: center;
   background-color: rgb(243, 255, 240);
   position: relative;
@@ -41,6 +41,7 @@ a {
 }
 .navBar1 {
   overflow: auto;
+  /* display: flex; */
 }
 .aPrimaMetàNav1 {
   float: left;
@@ -147,7 +148,7 @@ footer > div {
   padding-top: 3%;
   padding-bottom: 3%;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 150%;
@@ -155,7 +156,6 @@ footer > div {
 footer > div > ul,
 li {
   color: aliceblue;
-  padding: 0 1%;
 }
 footer > div > ul h6 {
   margin-bottom: 20px;
