--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,6 +111,7 @@ main {
 section {
   margin-bottom: 3.2%;
 }
+
 section > article > p {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   margin-top: 0.7%;
@@ -126,15 +127,25 @@ section > article > a:hover {
   border-bottom: none;
 }
 .imgMain {
-  width: 45%;
+  width: 100%;
   min-width: 340px;
-  border-radius: 4%;
+  max-height: 320px;
+  object-fit: cover;
+
 }
+
+.parallax {
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+}
+
 .broImg2Main,
 .img2Main {
   width: 50%;
   min-width: 100px;
-  border-radius: 4%;
   display: inline-block;
   margin-left: auto;
   margin-right: auto;
