--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,41 +1,35 @@
 @import url("https://fonts.googleapis.com/css2?family=Aldrich&display=swap");
 
-main {
-  padding-top: 0%;
-}
-
 body {
-  margin-top: 1%;
   text-align: center;
   background-color: rgb(243, 255, 240);
   position: relative;
   max-height: 100%;
   margin-left: auto;
   margin-right: auto;
-  min-width: 1200px;
 }
 
 h1 {
-  margin-top: -1.2%;
+  margin-top: -1.6vh;
   font-size: 400%;
   font-style: italic;
   font-family: cursive;
-  margin-bottom: 1.9%;
+  margin-bottom: 4vh;
 }
 h2 {
   font-size: 150%;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  margin-top: 1%;
+  margin-top: 2.3vh;
 }
 header {
-  padding-top: 1.1%;
   position: fixed;
   top: 0;
   background-color: rgb(243, 255, 240);
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  padding-bottom: 1.8%; /*MESSO SOLO PER NON FAR SFORARE BORDO A SX DI LENTE DURANTE LO SCORRIMENTO,
+  padding-top: 1.8vh; /*CREDO SIA NECESSARIO PER DISTANZIARE IL TOP DEL BODY, A CAUSA DEL POSITION FIXED NELL'HEADER*/
+  padding-bottom: 2.4vh; /*MESSO SOLO PER NON FAR SFORARE BORDO A SX DI LENTE DURANTE LO SCORRIMENTO,
                         DA ACCORCIARE QUEL BORDO*/
 }
 
@@ -45,11 +39,13 @@ a {
 }
 .navBar1 {
   overflow: auto;
+  margin-left: 1.8vh;
+  margin-right: 1.8vh;
   /* display: flex; */
 }
 .aPrimaMetàNav1 {
   float: left;
-  padding: 0.5%;
+  padding: 0.8vh;
   font-family: "Aldrich", sans-serif;
   font-weight: bold;
 }
@@ -58,35 +54,33 @@ a {
 }
 .aSecondaMetàNav1 {
   float: right;
-  padding: 0.5%;
+  padding: 0.8vh;
 }
 .aSecondaMetàNav1:hover {
   color: rgb(183, 0, 0);
 }
 
 .navBarFissa {
-  margin-top: 1.2%;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
 }
 .divHoverNavBarF {
   background-color: aqua;
-  padding: 1.5%;
+  padding: 6vh;
   width: 75%;
   height: fit-content;
   position: absolute;
-  margin-top: 13%;
-  top: 21%; /*CENTRA I DIV CHE APPAIONO SOTTO ANCORE*/
+  top: 38.5vh; /*CENTRA I DIV CHE APPAIONO SOTTO ANCORE*/
   left: 50%; /*   ""                            ""   */
   transform: translate(-50%, -50%); /*   ""                            ""   */
 }
 .divHoverNavBarF > img {
-  padding: 1%;
-  width: 14%;
+  padding: 1.7vh;
+  width: 9em;
 }
 .aNavFissa {
-  padding: 1%;
+  padding: 1rem;
   font-family: "Aldrich", sans-serif;
   font-weight: bold;
 }
@@ -96,7 +90,7 @@ a {
 }
 .lenteNavFissa {
   border-left: 1px solid;
-  padding: 1.5%;
+  padding: 1.3em;
 }
 .lenteNavFissa:hover {
   color: rgb(183, 0, 0);
@@ -104,18 +98,21 @@ a {
   font-size: 117%;
 }
 main {
-  margin-top: 10%;
-  /* padding-top: 3%; */
-  margin-bottom: 1%;
+  margin-top: 13vh;
+  padding-top: 3%;
+  margin-bottom: 1.3vh;
+  margin-left: 1.8vh;
+  margin-right: 1.8vh;
 }
 section {
-  margin-bottom: 3.2%;
+  margin-bottom: 5.5vh;
+  margin-top: 2.5vh;
 }
 
 section > article > p {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  margin-top: 0.7%;
-  margin-bottom: 0.7%;
+  margin-top: 1vh;
+  margin-bottom: 1vh;
   font-style: italic;
   font-size: 120%;
 }
@@ -128,43 +125,42 @@ section > article > a {
 section > article > a:hover {
   border-bottom: none;
 }
-.imgMain {
+.parallax {
   width: 100%;
-  min-width: 340px;
+  max-width: 95%;
+  max-height: 70vh;
   object-fit: cover;
-
+  box-shadow: 17px 18px 10px -11px rgba(0, 0, 0, 0.5);
 }
 
-.parallax {
-  height: 25vh;
-  background-image: url(https://placedog.net/280);
+/* .parallax {
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-
-}
+} */
 
 .broImg2Main,
 .img2Main {
   width: 50%;
-  min-width: 100px;
+  min-width: 120px;
+  max-width: 1200px;
   display: inline-block;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 1.1%;
+  margin-top: 1vh;
 }
 .img2Main {
   width: 100%;
+  box-shadow: 17px 18px 10px -11px rgba(0, 0, 0, 0.4);
 }
 footer {
   background-color: black;
-  margin-bottom: -1%;
 }
 footer > div {
   font-size: 110%;
-  padding-top: 3%;
-  padding-bottom: 3%;
+  padding-top: 4vh;
+  padding-bottom: 4vh;
   display: flex;
   justify-content: space-evenly;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
