--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,6 +89,7 @@ a {
   font-weight: bold;
   transition: 0.6s ease-in-out;
   position: relative;
+  text-align: center;
 }
 .aNavFissa:hover {
   font-size: 105%;
